<resources>
    <string name="app_name">HaloKonsultan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="chat">Chat</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="profil">Profil</string>

    <!--Booking Activity-->
    <string name="booking_konsultasi">Booking Konsultasi</string>
    <string name="text_command">Silakan isi data-data di bawah untuk melakukan booking konsultasi.</string>
    <string name="input_title_problem">Judul Masalah</string>
    <string name="input_desc_problem">Deskripsi Masalah</string>
    <string name="preferensi_konsultasi">Preferensi Konsultasi</string>
    <string name="online_konsultasi">Online</string>
    <string name="offline_konsultasi">Offline</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="kirim">Kirim</string>

    <string name="tab_text_1">Aktif</string>
    <string name="tab_text_2">Menunggu</string>
    <string name="tab_text_3">Selesai</string>

    <!--Upload Document-->
    <string name="unggah_dokumen">Unggah Dokumen</string>
    <string name="command_unggah_dokumen">Silakan unggah dokumen-dokumen berikut</string>
    <string name="simpan_dokumen">Simpan Dokumen</string>
    <string name="unggah">Unggah</string>

    <!--Choose Consultation Time-->
    <string name="pilih_waktu_konsultasi">Pilih Waktu Konsultasi</string>
    <string name="command_pilih_waktu">Silakan pilih waktu konsultasi yang tersedia</string>
    <string name="nama_lengkap_konsultan">Nama Lengkap Konsultan</string>
    <string name="kategori">kategori</string>
    <string name="masukkan_judul_masalah">Masukkan Judul Masalah</string>
    <string name="masukkan_deskripsi_masalah">Masukkan Deskripsi Masalah</string>
    <string name="senin_21_juni_2021_12_00">Senin, 21 Juni 2021, 12.00</string>
    <string name="selasa_22_juni_2021_12_00">Selasa, 22 Juni 2021, 12.00</string>
    <string name="rabu_23_juni_2021_14_00">Rabu, 23 Juni 2021, 14.00</string>
    <string name="masukkan_kota_kamu">Masukkan Kota Kamu</string>
    <string name="untuk_memberikanmu_data_konsultan_yang_berada_di_dekat_daerahmu">Untuk memberikanmu data konsultan yang berada di dekat daerahmu.</string>
    <string name="kota_anda">Kota Anda</string>
    <string name="masukkan_kota_anda">Masukkan kota Anda</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="sayu_ogiwara_s_h">Sayu Ogiwara, S.H</string>
    <string name="konsultan_hukum_perdata">Konsultan Hukum Perdata</string>
    <string name="_200_orang">200 orang</string>
    <string name="menyukai">Menyukai</string>
    <string name="sidoarjo">Sidoarjo</string>
    <string name="lokasi">Lokasi</string>
    <string name="tentang_saya">Tentang Saya</string>
    <string name="saya_adalah_konsultan_hukum_perdata_dengan_pengalaman_lebih_dari_6_tahun_di_bidang_ini_saya_telah_bekerja_sama_dengan_beberapa_perusahaan_besar_untuk_menangani_permasalahan_mereka">Saya adalah Konsultan Hukum Perdata dengan pengalaman lebih dari 6 tahun di bidang ini. Saya telah bekerja sama dengan beberapa perusahaan besar untuk menangani permasalahan mereka.</string>
    <string name="pengalaman_pekerjaan">Pengalaman Pekerjaan</string>
    <string name="dokumentasi_pekerjaan">Dokumentasi Pekerjaan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="bidang_keahlian">Bidang Keahlian</string>
    <string name="diskusi_rp_25_000">Diskusi - Rp 25.000</string>
    <string name="judul_konsultasi">Judul Konsultasi</string>
    <string name="strategi_marketing_menggunakan_digitalisasi">Strategi Marketing Menggunakan Digitalisasi</string>
    <string name="ringkasan_masalah">Ringkasan Masalah</string>
    <string name="ya_jadi_masalah_saya_itu_gini_pak_iya_gitu_jadi_saya_itu_gini_dan_gitu_terus_ada_gitu_ada_gini_lagi_iya_begitu_jadi_begitu_dan_begini_pak">Ya jadi masalah saya itu gini pak, iya gitu, jadi saya itu gini dan gitu, terus ada gitu, ada gini lagi, iya begitu. Jadi begitu dan begini Pak.</string>
    <string name="ofline_dan_online">Ofline dan online</string>
    <string name="lokasi_konsultasi">Lokasi Konsultasi</string>
    <string name="jauh_menuju_hatinya_yang_jauh_disana">Jauh menuju hatinya yang jauh disana</string>
    <string name="link_conference">Link Conference</string>
    <string name="link_conference_akan_diberikan_oleh_konsultan_5_menit_sebelum_waktu_konsultasi">Link Conference akan diberikan oleh konsultan 5 menit sebelum waktu konsultasi</string>
    <string name="waktu_konsultasi">Waktu Konsultasi</string>
    <string name="dokumen_dokumen">Dokumen-Dokumen</string>
    <string name="unggah_edit_dokumen">Unggah / Edit Dokumen</string>
    <string name="biaya_konsultasi">Biaya Konsultasi</string>
    <string name="rp_5_000_000">Rp 5.000.000</string>
    <string name="lanjutkan_bayar">Lanjutkan Bayar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_anda">Masukkan nama Anda</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan email Anda</string>
    <string name="kota">Kota</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="halo_konsultan_logo">Halo Konsultan Logo</string>
    <string name="konsultasi_jadi_lebih_mudah">Konsultasi Jadi Lebih Mudah.</string>
    <string name="dengan_halokonsultan_konsultasi_dengan_berbagai_macam_konsultan_jauh_lebih_mudah_daripada_sebelumnya">Dengan HaloKonsultan, konsultasi dengan berbagai macam konsultan jauh lebih mudah daripada sebelumnya.</string>
    <string name="masuk_ke_dalam_akun">Masuk ke Dalam Akun</string>
    <string name="registrasi_akun">Registrasi Akun</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali</string>
    <string name="masukkan_email_kamu">Masukkan email kamu</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_password_kamu">Masukkan password kamu</string>
    <string name="belum_punya_akun_registrasi">Belum punya akun? Registrasi</string>
    <string name="masukkan_nama_lengkap_kamu">Masukkan nama lengkap kamu</string>
    <string name="silahkan_isi_data_di_bawah_untuk_melakukan_registrasi_akun">Silahkan isi data di bawah untuk melakukan registrasi akun.</string>
    <string name="dengan_menekan_tombol_registrasi_akun_anda_telah_menyetujui_syarat_dan_ketentuan_kami">Dengan menekan tombol Registrasi Akun, Anda telah menyetujui syarat dan ketentuan kami.</string>
    <string name="cari_konsultan_kategori_konsultan">Cari Konsultan, Kategori Konsultan</string>
    <string name="lihat_kategori_konsultan">Lihat Kategori Konsultan</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="mohon_maaf_tidak_ada_hasil_untuk_pencarian_tersebut">Mohon maaf tidak ada hasil untuk pencarian tersebut.</string>
    <string name="chat_dengan_konsultan">Chat dengan Konsultan</string>
    <string name="konsultan_spesialis">Konsultan Spesialis</string>
    <string name="konsultan_terdekat">Konsultan Terdekat</string>
    <string name="lihat_lainnya">Lihat Lainnya</string>
    <string name="test_nama_lengkap">Test nama lengkap</string>
    <string name="test_mail_com">test@mail.com</string>
    <string name="surabaya">Surabaya</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="bank_dokumen">Bank Dokumen</string>
    <string name="category_icon">Category Icon</string>
    <string name="perpajakan">Perpajakan</string>
    <string name="_1500_orang_menyukai_konsultan_ini">1500 orang menyukai konsultan ini.</string>
    <string name="sidoarjo_indonesia">Sidoarjo, Indonesia</string>
    <string name="consultant_documentation">Consultant Documentation</string>
    <string name="university_up_and_down">University up and down</string>
    <string name="magister_hukum">Magister hukum</string>
    <string name="_2021_2021">2021–2021</string>
    <string name="konsultan_bae">Konsultan bae</string>
    <string name="dengan_sayu_ogiwara_s_h">Dengan Sayu Ogiwara, S.H</string>
    <string name="menunggu_konfirmasi_konsultan">Menunggu Konfirmasi Konsultan</string>
    <string name="_1">1</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="document_uploaded">document uploaded</string>
    <string name="ini_adalah_deskripsi_dari_dokumen_foto_ktp">Ini adalah deskripsi dari dokumen foto KTP</string>
    <string name="parent">Parent</string>
    <string name="title">Title</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="pesan_konsultan">Pesan Konsultan</string>
    <string name="selesai">Selesai</string>
    <string name="ditolak">Ditolak</string>
    <string name="provinsi_anda">Provinsi Anda</string>

    <!--Onboarding-->
    <string name="cari_konsultan">Cari Konsultan</string>
    <string name="desc_cari_konsultan">Semua konsultan yang anda butuhkan tersedia di sini.</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="chat_konsultan">Chat Konsultan</string>
    <string name="desc_chat_konsultan">Anda bisa melakukan chat dengan konsultasi dengan konsultan.</string>
    <string name="desc_booking_konsultasi">Tidak hanya chat, Anda juga bisa memesan konsultasi dan bahkan bertemu langsung dengan konsultan.</string>
    <string name="masuk">Masuk</string>
    <string name="provinsi">Provinsi</string>
    <string name="jawa_timur">Jawa Timur</string>
    <string name="consultant_name">Consultant name</string>
    <string name="dash">-</string>
    <string name="_00_00">00:00</string>
    <string name="silakan_ketik_pesanmu_di_sini">Silakan ketik pesanmu di sini</string>
    <string name="lewati">Lewati</string>
    <string name="refresh">Refresh</string>
    <string name="lanjut">Lanjut</string>
    <string name="ayo_mulai">Ayo Mulai</string>
    <string name="sepertinya_anda_terputus_coba_cek_koneksi_anda_kembali">Sepertinya Anda terputus, coba cek koneksi Anda kembali.</string>
    <string name="tidak_ada_data">Tidak Ada Data</string>
    <string name="isi_pesan">Isi pesan</string>
    <string name="buka_kamera">Buka kamera</string>
    <string name="tambah_dokumen">Tambah Dokumen</string>
    <string name="permintaan_konsultasi_anda_ditolak">Permintaan konsultasi Anda ditolak</string>
    <string name="alasan_penolakan">Alasan Penolakan</string>
    <string name="konsultasi_telah_berakhir">Konsultasi telah berakhir</string>
    <string name="sedang_menunggu_konfirmasi_dari_konsultan">Sedang menunggu konfirmasi dari konsultan</string>
    <string name="formatter_tanggal_jam">%1$s %2$s</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_nama_file">Masukkan Nama File</string>
    <string name="pilih_sumber_file">Pilih sumber file</string>
    <string name="saat_ini_fitur_chat_bersifat_gratis">*Saat ini fitur chat bersifat gratis</string>
    <string name="konsultasi_mulai_dari">Konsultasi mulai dari</string>
    <string name="konsultasi_terbaru">Konsultasi Terbaru</string>
    <string name="masuk_dengan_akun_demo">Masuk dengan Akun Demo</string>
    <string name="atau">Atau</string>
    <string name="apakah_anda_menyukai_konsultan_ini">Apakah Anda menyukai konsultan ini ?</string>
</resources>