<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_institution_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:lineSpacingExtra="8sp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/secondary_black"
            android:text="@string/university_up_and_down"/>

        <TextView
            android:id="@+id/tv_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:lineSpacingExtra="4sp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/placeholder"
            android:text="@string/magister_hukum"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_range_year"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:lineSpacingExtra="8sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/secondary_black"
        android:text="@string/_2021_2021"/>
</LinearLayout>