<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.screens.CariKonsultanScreenFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/halo_konsultan_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/bookingIcon"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:lottie_rawRes="@raw/booking_icon_rev"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/inter_bold"
        android:lineSpacingExtra="4dp"
        android:text="@string/booking_konsultasi"
        android:textColor="@color/primary_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingIcon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/desc_booking_konsultasi"
        android:textAlignment="center"
        android:textColor="@color/secondary_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/inter_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="8sp"
        android:paddingStart="32dp"
        android:paddingTop="13dp"
        android:paddingEnd="32dp"
        android:paddingBottom="13dp"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textColor="@color/primary_white"
        android:textSize="14sp"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/primary_white"
        android:shadowRadius="0"
        android:fontFamily="@font/inter_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="8sp"
        android:paddingStart="32dp"
        android:paddingTop="13dp"
        android:paddingEnd="32dp"
        android:paddingBottom="13dp"
        android:text="@string/sebelumnya"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue"
        android:textSize="14sp"
        app:cornerRadius="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>